# ares

./: .gitignore  COPYING  LICENSE  MANIFEST  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
ares/: __init__.py  cli.py  client.py  core.py  exceptions.py  test_ares.py
tests/: conftest.py  test_ares.py  test_cli.py  test_client.py
